[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/playerShip1_green.png" type="Texture" id=1]
[ext_resource path="res://scenes/PlayerMovement.gd" type="Script" id=2]
[ext_resource path="res://scenes/WallNode.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/white.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.0
height = 30.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.5, 33.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 304, 21 )

[node name="World" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 40.0
margin_top = 208.0
margin_right = 80.0
margin_bottom = 248.0

[node name="PlayerNode" type="Node2D" parent="."]
position = Vector2( 64, 344 )

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Area2D"]
shape = SubResource( 2 )

[node name="Resetter" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Resetter"]
position = Vector2( 0, 672 )
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="PlayerNode/Player"]
position = Vector2( 0, -821.409 )
scale = Vector2( 1, 2.05376 )
texture = ExtResource( 4 )
shadow_enabled = true

[node name="WallNode" parent="." instance=ExtResource( 3 )]
position = Vector2( 984, 320 )
__meta__ = {
"_edit_group_": true
}

[node name="WallNode2" parent="." instance=ExtResource( 3 )]
position = Vector2( 416, 320 )
__meta__ = {
"_edit_group_": true
}

[node name="WallNode3" parent="." instance=ExtResource( 3 )]
position = Vector2( 544, 368 )
__meta__ = {
"_edit_group_": true
}

[node name="WallNode4" parent="." instance=ExtResource( 3 )]
position = Vector2( 688, 320 )
__meta__ = {
"_edit_group_": true
}

[node name="WallNode5" parent="." instance=ExtResource( 3 )]
position = Vector2( 824, 280 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 64, 336 )
zoom = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.160784, 0.0431373, 0.258824, 1 )
z_index = -5
texture = ExtResource( 4 )

[connection signal="area_entered" from="PlayerNode/Player/Area2D" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Area2D" to="PlayerNode/Player" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Resetter" to="PlayerNode/Player" method="_on_Resetter_body_entered"]
